2003-06-02  Richard Henderson  <rth@redhat.com>

        * alpha-tdep.c (alpha_register_virtual_type): Use void_data_ptr
        for SP, GP; void_func_ptr for PC; non-language-specific types
        for all others.
        * alpha-tdep.h (ALPHA_GP_REGNUM): New.

2003-06-02  Richard Henderson  <rth@redhat.com>

	* top.h (lim_at_start): Declare.
	* main.c (captured_main): Set it.
	* top.c (lim_at_start): Define.
	(command_loop): Use it instead of &environ.
	* event-top.c (command_handler): Likewise.

2003-06-01  Jason Thorpe  <thorpej@wasabisystems.com>

	* mipsnbsd-tdep.c: Update copyright years.
	(fetch_core_registers): Correct arguments to mipsnbsd_supply_fpreg.

2003-06-01  Richard Henderson  <rth@redhat.com>

        * Makefile.in (ALLDEPFILES): Add alpha-mdebug-tdep.c.
        (alpha-linux-tdep.o): Update dependencies.
        (alpha-nat.o, alpha-tdep.o, alpha-mdebug-tdep.o): Likewise.
        * alpha-mdebug-tdep.c: Remove unneeded includes.

2003-06-01  Richard Henderson  <rth@redhat.com>

        * alpha-tdep.c (alpha_register_reggroup_p): New.
        (alpha_gdbarch_init): Register it.

2003-06-02  Andrew Cagney  <cagney@redhat.com>

	* dwarfread.c: Eliminate "register"
	(decode_die_type): Eliminate assignment within "if".
	(struct_type, decode_array_element_type): Ditto.
	(dwarf_read_array_type, read_tag_pointer_type): Ditto.
	(read_subroutine_type, enum_type, add_enum_psymbol): Ditto.
	(decode_modified_type, completedieinfo): Ditto.
	* block.c: Eliminate "register".
	(blockvector_for_pc_sect): Eliminate assignment within "if".
	* cp-support.h (struct symbol): Opaque declaration.
	* breakpoint.c (handle_gnu_v3_exceptions): Use xfree, not free.

2003-06-01  Richard Henderson  <rth@redhat.com>

        * alpha-tdep.c (alpha_gdbarch_init): Use set_gdbarch_print_insn ...
        (_initialize_alpha_tdep): ... not deprecated_tm_print_insn.

2003-06-01  Adam Fedor  <fedor@gnu.org>

	* gdbarch.sh (function_list): Add FETCH_POINTER_ARGUMENT.