@@ -1,5 +1,11 @@
 2003-06-02  Richard Henderson  <rth@redhat.com>
 
+        * alpha-tdep.c (alpha_register_convert_to_virtual): Tidy use of
+        deprecated interfaces; use ALPHA_REGISTER_SIZE instead of gdbarch
+        macros where appropriate.
+        (alpha_register_convert_to_raw): Similarly.  Use unpack_long.
+        (alpha_convert_flt_dbl, alpha_convert_dbl_flt): New.
+
         * alpha-tdep.c (alpha_register_virtual_type): Use void_data_ptr
         for SP, GP; void_func_ptr for PC; non-language-specific types
         for all others.
